[gd_scene load_steps=3 format=3 uid="uid://dpk7x2m8rvw1s"]

[ext_resource type="Script" path="res://src/ui/character_token.gd" id="1_token"]
[ext_resource type="Theme" path="res://theme/game_theme.tres" id="2_theme"]

[node name="CharacterToken" type="Control"]
theme = ExtResource("2_theme")
custom_minimum_size = Vector2(80, 100)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
mouse_filter = 0
script = ExtResource("1_token")

[node name="Panel" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="VBox" type="VBoxContainer" parent="Panel"]
layout_mode = 2
mouse_filter = 2

[node name="Portrait" type="TextureRect" parent="Panel/VBox"]
custom_minimum_size = Vector2(60, 60)
layout_mode = 2
size_flags_horizontal = 4
mouse_filter = 2

[node name="PortraitPlaceholder" type="ColorRect" parent="Panel/VBox/Portrait"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0.6, 0.4, 0.5, 1)

[node name="NameLabel" type="Label" parent="Panel/VBox"]
layout_mode = 2
mouse_filter = 2
text = "Name"
horizontal_alignment = 1

[node name="StatusLabel" type="Label" parent="Panel/VBox"]
layout_mode = 2
mouse_filter = 2
text = "Idle"
horizontal_alignment = 1
theme_override_font_sizes/font_size = 10
theme_override_colors/font_color = Color(0.7, 0.7, 0.7, 1)
